# hs-linux-memfd

./: .gitignore  ChangeLog.md  README.md  Setup.hs  linux-memfd.cabal  stack.yaml
cbits/: memfd.c
examples/: Main.hs
include/: memfd.h
src-doctests/: Main.hs
src/System/Linux/: MemFd.hs
